--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ management.endpoints.web.exposure.include=*
 # Logging
 logging.level.org.springframework=INFO
 logging.level.sql=debug
+logging.file.path=/tmp/logs
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
@@ -31,3 +32,7 @@ spring.resources.cache.cachecontrol.max-age=12h
 # wavefront observability platform configuration
 wavefront.application.name=spring-petclinic
 wavefront.application.service=app
+
+# Graceful shutdown
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=30s
