--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
  */
 
 plugins {
-    id 'org.springframework.boot' version '2.3.3.RELEASE'
+    id 'org.springframework.boot' version '2.3.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
     id 'maven-publish'
@@ -13,25 +13,29 @@ repositories {
     mavenCentral()
 }
 
+test.useJUnitPlatform()
+
+bootBuildImage.imageName = 'petclinic-test'
+
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.3.3.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:2.3.3.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-cache:2.3.3.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.3.3.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.3.3.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.3.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.3.4.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.3.4.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-cache:2.3.4.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.3.4.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.3.4.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.4.RELEASE'
     implementation 'org.flywaydb:flyway-core:6.4.1'
     implementation 'com.github.ben-manes.caffeine:caffeine:2.8.2'
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.2.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.5.RELEASE'
     implementation 'com.wavefront:wavefront-spring-boot-starter:2.0.1'
     implementation 'org.webjars:webjars-locator-core:0.45'
     implementation 'org.webjars:jquery:2.2.4'
     implementation 'org.webjars:jquery-ui:1.11.4'
     implementation 'org.webjars:bootstrap:3.3.6'
-    implementation 'org.springframework.boot:spring-boot-devtools:2.3.3.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-devtools:2.3.4.RELEASE'
     runtimeOnly 'mysql:mysql-connector-java:8.0.20'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.3.RELEASE'
-    testImplementation 'org.testcontainers:mysql:1.14.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.4.RELEASE'
+    testImplementation 'org.testcontainers:mysql:1.14.3'
 }
 
 group = 'org.springframework.samples'
