--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,7 @@ spring.resources.cache.cachecontrol.max-age=12h
 # wavefront observability platform configuration
 wavefront.application.name=spring-petclinic
 wavefront.application.service=app
+wavefront.freemium-account=true
 
 # Graceful shutdown
 server.shutdown=graceful
