Add liveness and readiness check

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.messages.basename=messages/messages
 
 # Actuator / Management
-management.endpoints.web.base-path=/manage
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.base-path=/manage
+#management.endpoints.web.exposure.include=*
+management.health.probes.enabled=true
 
 # Logging
 logging.level.org.springframework=INFO
