--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 test.useJUnitPlatform()
 
-bootBuildImage.imageName = 'petclinic-test'
+bootBuildImage.imageName = 'y1sh/petclinic-test'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator:2.3.4.RELEASE'
