Update petclinic docker image location

--- a/manifests/ns-default/petclinic-0-deployment.yaml
+++ b/manifests/ns-default/petclinic-0-deployment.yaml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
         - name: petclinic
-          image: docker.io/library/petclinic-test:latest
+          image: docker.io/y1sh/petclinic-test:latest
           imagePullPolicy: IfNotPresent
           resources:
             requests:
