Add host path to app volume

--- a/manifests/ns-default/petclinic-0-deployment.yaml
+++ b/manifests/ns-default/petclinic-0-deployment.yaml
@@ -72,4 +72,6 @@ spec:
               mountPath: /logs
       volumes:
         - name: logs
-          emptyDir: {}
+          hostPath:
+            path: /logs
+            type: Directory
