--- a/manifests/ns-default/petclinic-0-deployment.yaml
+++ b/manifests/ns-default/petclinic-0-deployment.yaml
@@ -34,6 +34,9 @@ spec:
         - name: petclinic
           image: docker.io/y1sh/petclinic-test:latest
           imagePullPolicy: IfNotPresent
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
           resources:
             requests:
               cpu: 500m
@@ -50,12 +53,16 @@ spec:
               port: petclinic-port
             initialDelaySeconds: 60
             timeoutSeconds: 15
+            periodSeconds: 10
+            failureThreshold: 3
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
               port: petclinic-port
             initialDelaySeconds: 60
             timeoutSeconds: 15
+            periodSeconds: 10
+            failureThreshold: 3
           env:
             - name: SPRING_DATASOURCE_URL
               value: "jdbc:mysql://mysql/petclinic"
@@ -70,6 +77,7 @@ spec:
           volumeMounts:
             - name: logs
               mountPath: /logs
+      terminationGracePeriodSeconds: 30
       volumes:
         - name: logs
           hostPath:
